@@ -1,3 +1,12 @@
+2012-01-27  MORITA Hajime  <morrita@google.com>
+
+        [WTF] WTFString.h has some extra JS_EXPORT_PRIVATEs
+        https://bugs.webkit.org/show_bug.cgi?id=77113
+
+        Reviewed by Darin Adler.
+
+        * wtf/text/WTFString.h: Removed some WTF_EXPORT_PRIVATE attributes which we don't need to export.
+
 2012-01-27  Zeno Albisser  <zeno@webkit.org>
 
         [Qt][Mac] Build fails after adding ICU support (r105997).
